Fix T99078: Crash closing the file selector in Wayland

Ensure wayland handlers run that clear the window immediately after
the window has been removed so dangling pointers to the window
aren't left set.